# motorgeek

./: .gitignore  .mcp.json  README.md  alembic.ini  config.example.yaml  config.yaml  pyproject.toml  seed_data.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2b9c3d4e5f6a_add_dougscore_to_cars.py  (+7 more)
data/: dougscore_anchors.json  dougscore_combined.json  motorgeek_dump.sql  seed_data.json  test_export.json
docs/: HANDOFF.md  generalized-framework-spec.md
motorgeek/: __main__.py  mcp_server.py
scripts/: _check_brands.py  _quickrank.py  add_mercedes_sl.py  backfill_all_gaps.py  backfill_cargo_estimates.py  backfill_engine_codes.py  bottom_buyer_tco.py  budget_dream_garage.py  compare_tco.py  compute_zp.py  dependent_origination.py  depreciation_projection.py  dougscore_compare.py  dougscore_import.py  dream_garage.py  dump_data.py  enrich_practicality_from_wikipedia.py  load_data.py  merge_dougscore.py  merge_dougscore_full.py  origination_story.py  parse_dougscore_paste.py  platform_analysis.py  platform_deep_dive.py  populate_dougscore.py  ppi_checklist.py  rank_5way.py  recompute_aggregates.py  recompute_zp.py  restore_score_notes_from_dump.py  roleplay_story.py  tco_bottom_buyer.py  tco_compare.py  top_30_by_length.py  top_30_composite.py  true_cost_of_ownership.py  v2_vs_v3_comparison.py  value_analysis.py  value_analysis_v2.py
tests/: test_car_cmds.py  test_composite.py  test_dougscore_compare.py  test_dougscore_import.py  test_dougscore_migration.py  test_llm.py  test_practicality_v2.py  test_scoring_build.py  test_zeperfs_calculator.py
(+163 files in other folders)
